# BPFense_ai_core

./: .gitignore  LICENSE  README.md  pyproject.toml
bpfense_ai/: __init__.py
bpfense_ai/api/: client.py  exceptions.py  schemas.py
bpfense_ai/configs/: settings.py
bpfense_ai/exports/sklearn/: model.pkl
bpfense_ai/inference/: __init__.py  aggregation.py  classifier.py  confidence.py
bpfense_ai/inference/_sklearn/: __init__.py  runtime.py
bpfense_ai/inference/_tensorflow/: __init__.py  runtime.py
bpfense_ai/inference/common/: feature_schema.py  interfaces.py  types.py
bpfense_ai/inference/onnx/: __init__.py  runtime.py
bpfense_ai/preprocessing/: exceptions.py  integrity.py  normalization.py  preprocessor.py  validators.py
bpfense_ai/testing/: replay_loader.py
exports/autoencoder/behavioral_autoencoder/: saved_model.pb
exports/sequence/behavioral_lstm_model/: saved_model.pb
exports/tensorflow/bpfense_saved_model/: saved_model.pb
reports/tests/: pytest_full.txt  pytest_golden.txt  pytest_regression.txt
synthetic_data/demo/: sample_telemetry.jsonl
tests/: test_api_health.py  test_api_predict.py  test_api_validation.py  test_preprocessing.py
tests/golden/: test_backend_inspection.py  test_behavior_detection.py  test_behavior_scores.py
tests/golden/benign/: normal_terminal_usage.json
tests/golden/malicious/: c2_beaconing.json  crypto_miner.json  data_exfiltration.json  dns_beaconing.json  (+4 more)
tests/regression/: replay_loader.py  test_backend_consistency.py  test_ensemble_calibration.py  test_inference_replay.py  test_replay_preprocessing.py
(+12 files in other folders)
