[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bpfense-ai"
version = "0.1.0"
description = "Behavioral security ML runtime and inference framework"
authors = [
  {name = "Anil"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "tensorflow",
  "scikit-learn",
  "onnxruntime",
  "joblib"
]

[tool.setuptools.packages.find]
include = ["bpfense_ai*"]
