[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bpfense-ai"
version = "0.1.0"
description = "Behavioral AI anomaly detection engine"
requires-python = ">=3.10"

dependencies = [
    "tensorflow",
    "numpy",
    "scikit-learn",
    "onnxruntime",
    "joblib",
]

[tool.setuptools.packages.find]
include = ["bpfense_ai*"]
